# ObservableCAFEv2

./: .gitignore  AGENTS.md  BUG_FINDINGS.md  Cargo.toml  Justfile  README.md  TODO.md  mcp-servers.toml  package-lock.json  package.json  process-compose.yml  restart.sh  session-inspect.py  spec-jsonrpc-tts-pipeline.md  start-tui.sh  start.sh  stop.sh
.github/workflows/: ci.yml
.pi/: bash-confirm-whitelist.json  test-sheetbot.py  test-sheetbot.sh
agents/: comfy.toml  default.toml  dice-llm.toml  dice.toml  fetch.toml  knowledgebase.toml  rot13.toml  rss-summarizer.toml  sheetbot.toml  stt.toml  volition.toml
cafe-agent-runtime/: Cargo.toml
cafe-agent-runtime/src/: config.rs  executor.rs  lifecycle.rs  loader.rs  main.rs  pipeline.rs  registry.rs  scheduler.rs  session_loop.rs  tool_detector.rs  tool_executor.rs  watcher.rs
cafe-beacon/: Cargo.toml
cafe-beacon/src/: main.rs
cafe-binary-store/: Cargo.toml
cafe-binary-store/src/: bus.rs  config.rs  db.rs  gc.rs  jwt.rs  main.rs  storage.rs
cafe-bus/: Cargo.toml
cafe-bus/benches/: bus_benchmarks.rs
cafe-bus/proptest-regressions/: client.txt
cafe-bus/src/: allowlist.rs  client.rs  config.rs  lib.rs  main.rs  registry.rs  session.rs
cafe-cli/: Cargo.toml
cafe-cli/src/: main.rs
cafe-comfy/: Cargo.toml  workflow.json
cafe-comfy/src/: comfyui.rs  config.rs  main.rs  worker.rs
cafe-demo/: Cargo.toml
cafe-demo/src/: main.rs
cafe-dice/: Cargo.toml
cafe-dice/src/: main.rs
cafe-http-proxy-sdk/: Cargo.toml
cafe-http-proxy-sdk/src/: lib.rs
cafe-knowledgebase/: Cargo.toml
cafe-knowledgebase-index/: Cargo.toml
cafe-knowledgebase-index/src/: main.rs
cafe-knowledgebase/src/: embed.rs  index.rs  main.rs
cafe-llm/: Cargo.toml
cafe-llm/src/: bus_client.rs  config.rs  context.rs  evaluator.rs  main.rs
cafe-llm/src/backends/: mod.rs  ollama.rs  openai.rs
cafe-mcp-bridge/: Cargo.toml
cafe-mcp-bridge/src/: main.rs  tools.rs
cafe-mcp-bridge/src/transport/: http.rs  stdio.rs
cafe-mcp-client/: Cargo.toml
cafe-mcp-client/src/: main.rs
cafe-rot13/: Cargo.toml
cafe-rot13/src/: main.rs
cafe-sdk/: Cargo.toml
cafe-sdk/src/: error.rs  lib.rs  ws.rs
cafe-sdk/src/bus/: any_transport.rs  iroh_transport.rs  mod.rs  reconnect.rs  transport.rs  wait.rs
cafe-sdk/src/http/: mod.rs  sse.rs
cafe-server/: Cargo.toml
cafe-server/src/: auth.rs  binary_ref.rs  bus_client.rs  config.rs  db.rs  main.rs  route_registry.rs  router.rs  sse.rs
cafe-server/src/handlers/: admin.rs  agents.rs  chat.rs  chunks.rs  mod.rs  models.rs  proxy.rs  quickies.rs  sessions.rs  stream.rs  ws_handler.rs
cafe-sheetbot/: Cargo.toml
cafe-sheetbot/src/: config.rs  main.rs  sheetbot.rs  worker.rs
cafe-store/: Cargo.toml
cafe-store/src/: bus_client.rs  config.rs  db.rs  main.rs
cafe-stt/: Cargo.toml
cafe-stt/src/: config.rs  main.rs  transcriber.rs
cafe-telegram/: bot.go  bot_test.go  client.go  client_test.go  config.go  db.go  db_test.go  go.mod  go.sum  main.go
cafe-tts/: Cargo.toml
cafe-tts/src/: config.rs  main.rs  voicebox.rs  worker.rs
cafe-tui/: Cargo.toml
cafe-tui/src/: api.rs  app.rs  config.rs  input.rs  main.rs  ui.rs
cafe-types/: Cargo.toml
cafe-types/benches/: serialization.rs
cafe-types/proptest-regressions/: chunk.txt  envelope.txt
cafe-types/src/: annotation.rs  chunk.rs  codec.rs  envelope.rs  error.rs  jsonrpc.rs  lib.rs  session.rs  step.rs  tools.rs
cafe-web/: index.html  package-lock.json  package.json
cafe-web-fetch/: Cargo.toml
cafe-web-fetch/src/: main.rs
cafe-web-sdk/: package.json  tsconfig.json
cafe-web-sdk/src/: chat.ts  client.ts  index.ts  quickies.ts  sessions.ts  stream.ts  types.ts
cafe-web/docs/: gotchas.md
cafe-web/public/: manifest.json
cafe-web/src/: App.tsx  main.tsx  streaming.test.ts  streaming.ts  types.ts  vite-env.d.ts
cafe-web/src/api/: chat.ts  client.ts  quickies.ts  sessions.ts  stream.ts
cafe-web/src/components/: ChatArea.tsx  ChunkViewer.tsx  Message.tsx  QuickiesPanel.tsx  Sidebar.tsx  StreamingIndicator.tsx  TokenSetup.tsx
cafe-web/src/hooks/: useSessions.ts
cafe-web/src/store/: sessions.ts
docs/: AGENT.md  adr-001-unix-socket-message-bus.md  adr-002-event-sourced-chunk-model.md  adr-003-annotations-as-metadata.md  adr-004-session-scoped-routing.md  adr-005-transient-sole-persistence-gate.md  adr-006-jsonrpc-over-bus-annotations.md  adr-100-subscribe-filtered.md  adr-101-connection-ids.md  adr-102-direct-to-chunks.md  adr-103-mutation-chunks.md  adr-104-transient-chunk-retention.md  adr-105-session-restore-on-restart.md  adr-106-subscribe-all-migration.md  adr-107-binary-streaming.md  adr-108-annotation-key-namespace.md  adr-109-web-fetch-service.md  adr-110-dynamic-http-proxy.md  adr-111-knowledgebase.md  adr-112-mcp-bridge.md  adr-113-websocket-bridge.md  adr-114-binary-upload-completion-event.md  adr-115-http-binary-ref-rejection.md  adr-116-ephemeral-sessions.md  adr-117-session-tags.md  adr-118-iroh-transport.md  adr-119-binary-codec.md  adr-120-iroh-allowlist.md  architecture.md  cafe-agent-runtime.md  cafe-annotations.md  cafe-bus.md  cafe-comfy.md  cafe-llm.md  cafe-server.md  cafe-store.md  cafe-telegram.md  cafe-tui.md  cafe-types.md  cafe-web.md  (+4 more)
docs/design/: binary-ref
knowledgebase.lance/__manifest/_transactions/: 0-448b1b91-36eb-4bf3-ac83-5d25bcda9ef4.txn
knowledgebase.lance/default.lance/_transactions/: 0-1d0f4627-a9ee-498a-9c30-3c85839673ba.txn  1-e015a65e-83cf-4a4d-8ea9-0c85665de071.txn  2-f7735647-5204-4a44-8fc3-a7fa3c69e289.txn
llm-cafe/: pyproject.toml
llm-cafe/llm_cafe/: __init__.py  client.py  model.py  test_client.py
session-inspect/: pyproject.toml
tests/: README.md  binary-ref-e2e.py  binary-store-e2e.py  bus-filters-e2e.py  config-switching-e2e.py  ephemeral-sessions-e2e.py  iroh-transport-e2e.py  lifecycle-e2e.py  mcp-bridge-e2e.py  mcp-client-e2e.py  mock-llm-server.py  source-connection-e2e.py  stt-e2e.py  tool-calling-e2e.py  tool-lifecycle-e2e.py  tts-e2e.py  volition-pipeline-e2e.py
tests/fixtures/knowledgebase/: sweden-cities.txt  sweden-geography.txt  (+1 more)
