[workspace]
resolver = "2"
members = [
    "cafe-types",
    "cafe-bus",
    "cafe-store",
    "cafe-llm",
    "cafe-server",
    "cafe-tui",
    "cafe-agent-runtime",
    "cafe-tts",
    "cafe-comfy",
    "cafe-sheetbot",
    "cafe-demo",
    "cafe-dice",
    "cafe-web-fetch",
    "cafe-knowledgebase",
    "cafe-knowledgebase-index",
    "cafe-http-proxy-sdk",
    "cafe-sdk",
    "cafe-cli",
    "cafe-binary-store",
    "cafe-mcp-bridge",
    "cafe-mcp-client",
    "cafe-rot13",
    "cafe-stt",
]

# Shared dependency versions — pin once here, reference everywhere
[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
tracing     = "0.1"
tracing-subscriber = "0.3"
anyhow      = "1"
reqwest     = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
futures-util = "0.3"
thiserror   = "1"
