[package]
name = "cafe-agent-runtime"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cafe-agent-runtime"
path = "src/main.rs"

[dependencies]
cafe-types           = { path = "../cafe-types" }
tokio                = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
tracing              = { workspace = true }
tracing-subscriber   = { workspace = true }
anyhow               = { workspace = true }
toml                 = "0.8"
notify               = "6"
tokio-cron-scheduler = "0.10"
sha2                 = "0.10"
glob                 = "0.3"
