[package]
name = "cafe-agent-runtime"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cafe-agent-runtime"
path = "src/main.rs"

[dependencies]
cafe-sdk             = { path = "../cafe-sdk", features = ["bus-client"] }
tokio                = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
tracing              = { workspace = true }
tracing-subscriber   = { workspace = true }
anyhow               = { workspace = true }
toml                 = "0.8"
notify               = "6"
tokio-cron-scheduler = "0.10"
sha2                 = "0.10"
glob                 = "0.3"
base64               = "0.21"
thiserror            = "1"
regex                = "1"

[dev-dependencies]
tempfile = "3.0"
proptest = "1"
