[package]
name = "cafe-bus"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cafe-bus"
path = "src/main.rs"

[dependencies]
cafe-types         = { path = "../cafe-types" }
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
