[package]
name = "cafe-bus"
version = "0.1.0"
edition = "2021"

[lib]
name = "cafe_bus"
path = "src/lib.rs"

[[bin]]
name = "cafe-bus"
path = "src/main.rs"

[dependencies]
cafe-types         = { path = "../cafe-types" }
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
libc               = "0.2"
iroh               = { version = "1", optional = true }
sqlx               = { version = "0.7", features = ["sqlite", "runtime-tokio"], optional = true }

[features]
default = ["iroh-listener", "bincode-listener"]
iroh-listener = ["dep:iroh", "dep:sqlx"]
bincode-listener = ["cafe-types/bincode-codec"]

[[bench]]
name = "bus_benchmarks"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1"
