[package]
name = "cafe-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
cafe-sdk = { path = "../cafe-sdk", features = ["bus-client"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
tracing-subscriber = "0.3"
