[package]
name = "cafe-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
cafe-sdk      = { path = "../cafe-sdk", features = ["bus-client"] }
tokio         = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow        = { workspace = true }
