[package]
name = "cafe-knowledgebase"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cafe-knowledgebase"
path = "src/main.rs"

[dependencies]
cafe-sdk = { path = "../cafe-sdk", features = ["bus-client"] }
lancedb = "0.31"
arrow = "58"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
uuid = { version = "1", features = ["v4"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
