[package]
name = "cafe-mcp-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cafe-mcp-client"
path = "src/main.rs"

[dependencies]
cafe-sdk = { path = "../cafe-sdk", features = ["bus-client"] }
tokio = { workspace = true, features = ["io-util", "sync", "net", "process", "rt"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
