[package]
name = "cafe-rot13"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cafe-rot13"
path = "src/main.rs"

[dependencies]
cafe-sdk = { path = "../cafe-sdk", features = ["bus-client"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
