[package]
name = "cafe-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cafe-server"
path = "src/main.rs"

[dependencies]
cafe-sdk           = { path = "../cafe-sdk", features = ["bus-client"] }
cafe-http-proxy-sdk = { path = "../cafe-http-proxy-sdk" }
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
axum               = { version = "0.7", features = ["multipart"] }
tower-http         = { version = "0.5", features = ["cors", "trace"] }
sqlx               = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
tokio-stream       = "0.1"
uuid               = { version = "1", features = ["v4"] }
reqwest            = { version = "0.12", features = ["json", "stream"] }
glob               = "0.3"
toml               = "0.8"
argon2             = "0.5"
rand               = { version = "0.8", features = ["std_rng"] }
base64             = "0.22"
