[package]
name = "cafe-stt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cafe-stt"
path = "src/main.rs"

[dependencies]
cafe-sdk = { path = "../cafe-sdk", features = ["bus-client"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
