[package]
name = "cafe-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cafe-tui"
path = "src/main.rs"

[dependencies]
cafe-types   = { path = "../cafe-types" }
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tracing      = { workspace = true }
anyhow       = { workspace = true }
ratatui      = "0.26"
crossterm    = "0.27"
reqwest      = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
clap         = { version = "4", features = ["derive", "env"] }
