[package]
name = "cafe-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cafe-tui"
path = "src/main.rs"

[dependencies]
cafe-sdk     = { path = "../cafe-sdk", features = ["http-client"] }
tokio        = { workspace = true }
tracing      = { workspace = true }
anyhow       = { workspace = true }
ratatui      = "0.26"
crossterm    = "0.27"
clap         = { version = "4", features = ["derive", "env"] }
