[package]
name = "cafe-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
uuid        = { version = "1", features = ["v4", "serde"] }
thiserror   = "1"
base64      = "0.22"
bincode     = { version = "2", features = ["serde"], optional = true }

[features]
default = ["bincode-codec"]
raw-binary-data = []
bincode-codec = ["dep:bincode"]

[[bench]]
name = "serialization"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1"
